{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 429,
  "lineage": "75054228-bd81-521f-5663-72b7effa9d44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ba773c408444545",
            "domain": "vpc",
            "id": "eipalloc-06ba773c408444545",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-198-158.compute-1.amazonaws.com",
            "public_ip": "54.225.198.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0322d1ef01feb806b",
            "domain": "vpc",
            "id": "eipalloc-0322d1ef01feb806b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-233-184-167.compute-1.amazonaws.com",
            "public_ip": "34.233.184.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:internet-gateway/igw-0e8a27ecd0944feb0",
            "id": "igw-0e8a27ecd0944feb0",
            "owner_id": "120966202294",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-03e16a10e53360430"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ba773c408444545",
            "association_id": "eipassoc-03f53708e39265f1f",
            "connectivity_type": "public",
            "id": "nat-0f8c5158447d624d4",
            "network_interface_id": "eni-043231b39272713d8",
            "private_ip": "10.0.1.208",
            "public_ip": "54.225.198.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0638fcea0f89d96f6"
          },
          "dependencies": [
            "aws_eip.nat_public",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0322d1ef01feb806b",
            "association_id": "eipassoc-00852323107290659",
            "connectivity_type": "public",
            "id": "nat-03450222d84916d99",
            "network_interface_id": "eni-01e2f4387567464f2",
            "private_ip": "10.0.2.167",
            "public_ip": "34.233.184.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da35921596804330"
          },
          "dependencies": [
            "aws_eip.nat_public",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:route-table/rtb-057e592dac582a57f",
            "id": "rtb-057e592dac582a57f",
            "owner_id": "120966202294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f8c5158447d624d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-0"
            },
            "tags_all": {
              "Name": "private-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e16a10e53360430"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_public",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:route-table/rtb-02112071f8a538b4d",
            "id": "rtb-02112071f8a538b4d",
            "owner_id": "120966202294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03450222d84916d99",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-1"
            },
            "tags_all": {
              "Name": "private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e16a10e53360430"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_public",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:route-table/rtb-05088240f68ddaf8b",
            "id": "rtb-05088240f68ddaf8b",
            "owner_id": "120966202294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8a27ecd0944feb0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e16a10e53360430"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0f79de6cd55708a",
            "route_table_id": "rtb-057e592dac582a57f",
            "subnet_id": "subnet-0bac220b09006b79a"
          },
          "dependencies": [
            "aws_eip.nat_public",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a7dc6cc8804134",
            "route_table_id": "rtb-02112071f8a538b4d",
            "subnet_id": "subnet-0b7a1d88b9dac450f"
          },
          "dependencies": [
            "aws_eip.nat_public",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e04246f92d7a8f2",
            "route_table_id": "rtb-05088240f68ddaf8b",
            "subnet_id": "subnet-0638fcea0f89d96f6"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0101aa2c512319232",
            "route_table_id": "rtb-05088240f68ddaf8b",
            "subnet_id": "subnet-0da35921596804330"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:subnet/subnet-0bac220b09006b79a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bac220b09006b79a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120966202294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-alb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-0",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-alb": "1"
            },
            "vpc_id": "vpc-03e16a10e53360430"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:subnet/subnet-0b7a1d88b9dac450f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7a1d88b9dac450f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120966202294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-alb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-alb": "1"
            },
            "vpc_id": "vpc-03e16a10e53360430"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:subnet/subnet-0638fcea0f89d96f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0638fcea0f89d96f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "120966202294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-0",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03e16a10e53360430"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:subnet/subnet-0da35921596804330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da35921596804330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "120966202294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03e16a10e53360430"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120966202294:vpc/vpc-03e16a10e53360430",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbba637fd62fc371",
            "default_route_table_id": "rtb-0fd0743c609635599",
            "default_security_group_id": "sg-062edaf5229270d95",
            "dhcp_options_id": "dopt-02c0e90b2bd8138b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e16a10e53360430",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd0743c609635599",
            "owner_id": "120966202294",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}